[gd_scene load_steps=4 format=3 uid="uid://cmq5ib8kw1egv"]

[ext_resource type="Script" path="res://component.gd" id="1_umofg"]
[ext_resource type="Texture2D" uid="uid://cj8gshm0ndgbw" path="res://wonderful.png" id="2_spdok"]
[ext_resource type="Texture2D" uid="uid://bww0chf7pymm1" path="res://antiwonderful.png" id="3_7kr22"]

[node name="component" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_umofg")

[node name="iconContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 32.0
offset_bottom = -40.0
grow_vertical = 0

[node name="icon" type="TextureButton" parent="iconContainer"]
layout_mode = 2
texture_normal = ExtResource("2_spdok")
texture_pressed = ExtResource("3_7kr22")

[node name="container" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="iconContainer/icon" to="." method="_icon_pressed"]
[connection signal="gui_input" from="container" to="." method="gui_input"]
